--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pinia-lasting",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "types": "lib/index.d.ts",
   "main": "lib/pinia-lasting.esm.js",
   "keywords": [
@@ -16,5 +16,7 @@
     "rollup-plugin-typescript2": "^0.31.2",
     "typescript": "^4.6.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
